LeAnal.jj
PARSER_BEGIN(LeAnal)

public class LeAnal {

	public static void main(String args []) throws ParseException{
		try{
			LeAnal parser = new LeAnal(System.in);
			parser.Program();
		}
		catch(ParseException e){
			System.out.println(e.getMessage());
			System.out.println("Analizador encontrou erros na análise! \n\n");
		}
	}
}

PARSER_END(LeAnal)

//ESPACOS VAZIOS
SKIP :
{
	  " "
	| "\t"
	| "\n"
	| "\r"
	| "\f"
}

//TOKENS ESTÁTICOS
TOKEN:
{
	<NUMBER:["0"-"9"]>{System.out.println("NUMBER -> "+image);}
	|<LETTER:["a"-"z","A"-"Z"]> {System.out.println("LETTER ->");}
<<<<<<< HEAD
	|<LPAREN: ")">{System.out.println("LPAREN -> " + image);}
    	|<RPAREN: "(">{System.out.println("RPAREN -> " + image);}
	|<LBRACE: "{">{System.out.println("LBRACE -> " + image);}
	|<RBRACE: "}">{System.out.println("RBRACE -> " + image);}
	|<LBRACKET: "]">{System.out.println("LBRACKET -> " + image);}
	|<RBRACKET: "[">{System.out.println("RBRACKET-> " + image);}
	|<COMMA: "[">{System.out.println("COMMA-> " + image);}
=======
	|<RPAREN: ")">{System.out.println("LPAREN -> " + image);}
    	|<LPAREN: "(">{System.out.println("RPAREN -> " + image);}
	|<RBRACE: "{">{System.out.println("LBRACE -> " + image);}
	|<LBRACE: "}">{System.out.println("RBRACE -> " + image);}
	|<RBRACKET: "]">{System.out.println("LBRACKET -> " + image);}
	|<LBRACKET: "[">{System.out.println("RBRACKET-> " + image);}
>>>>>>> 0964212f8ab8eb91e33bc700d66f63216bcc8894
	|<SEMICOLON: ";">{System.out.println("SEMICOLON -> " + image);}
	|<EQUAL: "="> {System.out.println("EQUAL -> "+image);}
	|<MULT: "*"> {System.out.println("MULT -> "+image);}
    	|<MOD: "%"> {System.out.println("MOD -> "+image);}
	|<DIV: "/"> {System.out.println("DIV -> "+image);}
	|<PLUS: "+"> {System.out.println("PLUS -> "+image);}
	|<MINUS: "-"> {System.out.println("MNIUS -> "+image);}
	|<OR: "||"> {System.out.println("OR ->"+image);}
	|<AND: "&&"> {System.out.println("AND -> "+image);}
	|<DEQUAL: "=="> {System.out.println("DEQUAL -> "+image);}
	|<DIF: "!="> {System.out.println("DIF -> "+image);}
	|<LESS: "<"> {System.out.println("LESS -> "+image);}
	|<GREATER: ">"> {System.out.println("GREATER -> "+image);}
	|<LEQ: "<="> {System.out.println("LEQ -> "+image);}
	|<GEQ: ">="> {System.out.println("GEQ -> "+image);}
	
}

//PALAVRAS RESERVADAS
TOKEN:
{
	<IF: "if">{System.out.println("IF -> "+image);}
	|<ELSE: "else">{System.out.println("ELSE -> "+image);}
	|<WHILE: "while">{System.out.println("WHILE -> "+image);}
	|<MAIN: "main">{System.out.println("MAIN -> "+image);}
	|<TYPEDEF: "typedef">{System.out.println("TYPEDEF -> "+image);}
	|<INT: "int">{System.out.println("INT -> "+image);}
	|<FLOAT: "float">{System.out.println("FLOAT -> "+image);}
	|<CHAR: "char">{System.out.println("CHAR -> "+image);}
	|<VOID: "void">{System.out.println("VOID -> "+image);}
	
}

//TOKEN IDENTIFICADOR
TOKEN:
{
	<IDENT:<LETTER>(<LETTER>|<NUMBER>)*>{System.out.println("IDENT -> "+image);}
}

/********************************************************
 * THE C-LIKE LANGUAGE GRAMMAR WITH TYPEDEF STARTS HERE *
 ********************************************************/
 
//1
void Program():{}
{
	(VariableDeclaration()|TypeDefDeclaration())*
	(ProcedureDeclaration())+
	<EOF>
}

//2
void ProcedureDeclaration():{}
{	
	<VOID>(ProcedureHeading())<LBRACE>(ProcedureBody())<RBRACE>
}

//3
void ProcedureBody():{}
{
	(VariableDeclaration()|TypeDefDeclaration())*
	(StatementSequence())
}

//4
void ProcedureHeading():{}
{
	<IDENT><LPAREN>[FormalParameters()]<RPAREN>
}

//5
void FormalParameters():{}
{
	(FPSection())
	(<COMMA>FPSection())*
}

//6
void FPSection():{}
{
	(Type())<IDENT>
}
//7
void TypeDefDeclaration():{}
{
	<TYPEDEF>(Type())<IDENT><SEMICOLON>
}

//8
void VariableDeclaration():{}
{
	(Type())(IdentList())<SEMICOLON>
}

//9
void IdentList():{}
{
	(<IDENT>)
	(<COMMA><IDENT>)*
}

//10
void Type():{}
{
	(<CHAR>|<INT>|<FLOAT>|<VOID>)
}

//11
void StatementSequence():{}
{
	(Statement())+

}

//12
void Statement():{}
{
	Asssignment()|WhileStatement()|IfStatement()|ProcedureCall()
}

//13
void WhileStatement():{}
{	
	<WHILE><LPAREN>Logical_OR()<RPAREN><LBRACE>StatementSequence()<RBRACE>
}

//14
void IfStatement():{}
{
	<IF><LPAREN>Logical_OR()<RPAREN><LBRACE>StatementSequence()<RBRACE>(<ELSE><LBRACE>Statement()<RBRACE>)*
}

//15
void ProcedureCall():{}
{
	<IDENT><LPAREN>(ExpList())*<RPAREN><SEMICOLON>
}

//16
void ExpList():{}
{
	Logical_OR(<COMMA>Logical_OR)+
}
//17
void Assignment():{}
{
	Designator()<EQUAL>Logical_OR()<SEMICOLON>
}

//18
void Logical_OR():{}
{

}

//19
void Logical_AND():{}
{

}

//20
void Expression():{}
{

}

//21
void EqualityExpr():{}
{

}

//22
void SimpleExpr():{}
{

}

//23
void Term():{}
{

}

//24
void Unary():{}
{

}

//25
void Factor():{}
{

}

//26
void Designator():{}
{

}
